# whisperx-on-aws-fargate

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
copilot/: .workspace
copilot/environments/transcribe-recordings-env/: manifest.yml
copilot/transcribe-recordings/: manifest.yml
data/tests/this_is_a_test_recording/: audio1485756545.m4a
src/: main.py
src/transcribe/: aws_utils.py  video_utils.py  whisper.py
